--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-aiogram==2.25.1
-fastapi==0.95.2
-uvicorn==0.29.0
-aiohttp
+aiogram==3.2.0
+fastapi==0.110.0
+httpx==0.27.0
 python-dotenv==1.0.1
-ujson==5.10.0
+uvicorn==0.29.0
