--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiogram==3.2.0
-fastapi==0.95.2
+fastapi==0.110.0
 httpx==0.27.0
 python-dotenv==1.0.1
 uvicorn==0.29.0
-pydantic==1.10.13
+pydantic==2.5.3
+pydantic-core==2.14.6
