--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     plan: free
     branch: main
     buildCommand: |
-      pip install --only-binary=:all: -r requirements.txt
+      pip install -r requirements.txt
     startCommand: |
       uvicorn main:app --host 0.0.0.0 --port 10000
     envVars:
